feat: improved expection handling